syntax = "proto3";

package Protocol;
option csharp_namespace = "MyPokemon.Protocol";

// 顶层消息
message Message {
    MessageType type = 1;
    oneof payload {
        // Auth相关
        RegisterRequest register_request = 2;
        RegisterResponse register_response = 3;
        LoginRequest login_request = 4;
        LoginResponse login_response = 5;
        VerifyEmailRequest verify_request = 6;
        VerifyEmailResponse verify_response = 7;

        // Game相关
        PlayerPosition position_update = 8;
        PlayerJoinedMessage player_joined = 9;
        PlayerLeftMessage player_left = 10;
        InitialPlayersMessage initial_players = 11;
    }
}

// 统一的消息类型枚举
enum MessageType {
    MESSAGE_TYPE_UNKNOWN = 0;
    
    // Auth消息类型 1-100
    MESSAGE_TYPE_REGISTER_REQUEST = 1;
    MESSAGE_TYPE_REGISTER_RESPONSE = 2;
    MESSAGE_TYPE_LOGIN_REQUEST = 3;
    MESSAGE_TYPE_LOGIN_RESPONSE = 4;
    MESSAGE_TYPE_VERIFY_EMAIL_REQUEST = 5;
    MESSAGE_TYPE_VERIFY_EMAIL_RESPONSE = 6;
    
    // Game消息类型 101-200
    MESSAGE_TYPE_POSITION_UPDATE = 101;
    MESSAGE_TYPE_PLAYER_JOINED = 102;
    MESSAGE_TYPE_PLAYER_LEFT = 103;
    MESSAGE_TYPE_INITIAL_PLAYERS = 104;
}

// Auth相关消息定义
message RegisterRequest {
    string email = 1;
    string password = 2;
    string player_name = 3;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
    string token = 3;
    string player_name = 4;
    float position_x = 5;
    float position_y = 6;
    MoveDirection direction = 7;
}

message VerifyEmailRequest {
    string email = 1;
    string code = 2;
}

message VerifyEmailResponse {
    bool success = 1;
    string message = 2;
}

// Game相关消息定义
message PlayerPosition {
    string player_id = 1;
    float x = 2;
    float y = 3;
    MoveDirection direction = 4;
    int64 last_update_time = 5;
    MotionStates motion_state = 6;
}

message PlayerJoinedMessage {
    string player_id = 1;
    float x = 2;
    float y = 3;
    MoveDirection direction = 4;
    MotionStates motion_state = 5;
}

message PlayerLeftMessage {
    string player_id = 1;
}

message InitialPlayersMessage {
    repeated PlayerPosition players = 1;
}

// 移动方向
enum MoveDirection {
    MOVE_DIRECTION_NONE = 0;
    MOVE_DIRECTION_UP = 1;
    MOVE_DIRECTION_DOWN = 2;
    MOVE_DIRECTION_LEFT = 3;
    MOVE_DIRECTION_RIGHT = 4;
}

// 运动状态
enum MotionStates {
    MOTION_STATES_IDLE = 0;
    MOTION_STATES_MOVEMENT = 1;
    MOTION_STATES_JUMP = 2;
    MOTION_STATES_TELEPORT = 3;
} 
